<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Addmeeting">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:hint="@string/title_of_meeting"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:autofillHints=""
        android:inputType="datetime"
        android:hint="@string/date_and_time"
        android:textSize="20sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/unknownName"
        android:inputType="textPersonName"
        android:hint="@string/host_of_meeting"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/search_go"
        android:inputType="textWebEditText"
        android:hint="@string/enter_link_of_meeting"
        android:textSize="20sp"
        android:autoLink="web"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/paste"
        android:inputType="numberSigned"
        android:hint="@string/meeting_i_d"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/paste"
        android:inputType="numberPassword"
        android:hint="@string/password"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/paste_as_plain_text"
        android:inputType="textMultiLine"
        android:hint="@string/description_of_meeting"
        android:textSize="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"/>


</LinearLayout>