<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/dp"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/entername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textSize="20sp"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/enter_phone_number"/>

    <EditText
        android:id="@+id/emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_e_mail_id"
        android:textSize="20sp" />


</LinearLayout>