<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="105dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        tools:srcCompat="@drawable/calendar_512" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="@android:string/emptyPhoneNumber"
         />

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />


</LinearLayout>